feat: add Google authentication
